# BingoBackend

./: .gitignore  README.md
app/: CMakeLists.txt
app/src/: main.cpp  pluginUtils.h
plugin/: CMakeLists.txt  settings.json  testing.json  testingSimple.json
plugin/lib/linux/BingoPlugin/include/: bingoPlugin.h
plugin/src/: bingoPlugin.cpp  card.cpp  card.h  game.cpp  game.h  gametest.cpp  gametest.h  main.cpp  player.cpp  player.h  settings.cpp  settings.h  utils.cpp  utils.h
